--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,73 +1,161 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Significa</title>
+    <link href="style/bootstrap.min.css" rel="stylesheet" />
+    <link href="style/index.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="scripts/bootstrap.bundle.js"></script>
+    <script src="scripts/script.js"></script>
   </head>
   <body>
-    Showcase
-    Services
-    About
-    Careers
-    Labs
-    Contact
-    Your go-to digital agency
-    Significa is a digital design-led agency mainly focused on Product Development.
-    Oopsie for users — Your favourite food, one click away!
-    Business Analysis, Product Management, Consultancy & 5 others
-    Opennode — Bitcoin, for everyday.
-    UI/UX, Front End, Front End
-    AKASHA — Open systems to expand our collective mind.
-    UI/UX, Front End, Illustration
-    We build digital products
-    Having a design-led approach to what we do defines who we are. We take on products from inception to launch, from business model to people's pocket, from wireframe to continuous deployment.
-    Strategy
-    UX research
-    Business strategy
-    Brand strategy
-    Product strategy
-    Product management
-    Product design
-    Product design
-    User experience
-    User interface
-    Brand development
-    Illustration
-    Motion & Video
-    Development
-    Development
-    Front-end engineering
-    Web-app development
-    Native app development
-    Development operations
-    View services
-    View services
-    What's new on Significa Labs
-    Automating releases for UI Kits — How to automate release logs and builds for your style guides
-    Tutorial on Medium
-    An iceberg sank the Titanic — But what’s that got to do with text hierarchy?
-    Article on Medium
-    On creating synergies — Sharing without compromising our identity
-    Article on Medium
-    Enter the Lab
-    Drop by, we're hiring.
-    We are an open-minded, open-hearted team that loves the thrill of creating exciting new projects. Drop us a line if you’re passionate and talented to do everything you set your mind to.
-    View careers
-    Legal © 2019
-    Say
-    hello@significa.co
-    (+351) 226 001 751
-    Links
-    Home
-    Showcase
-    Services
-    About
-    Careers
-    Labs
-    Contact
-    Network
-    Coletiv
-    Adamant
-    Follow us
+    <div class="navbar navbar-light bg-light">
+      <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+          <img src="images/logo.svg" class="d-inline-block align-top" alt="Significa logo" />
+        </a>
+      </nav>
+      <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link active black-text" href="#">Showcase</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link black-text" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link black-text" href="#">Careers</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link black-text" href="#">Labs</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link black-text" href="#">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link black-text" href="#">Services</a>
+        </li>
+      </ul>
+    </div>
+    <div class="container">
+      <div>
+        <p class="display-4 my-5" style="height: 250px;">Your go-to<br />digital agency</p>
+      </div>
+      <div class="my-5">
+        <span
+          >Significa is a digital design-led agency mainly<br />focused on Product
+          Development.</span
+        >
+      </div>
+    </div>
+    <div class="container pb-5 mb-5">
+      <div class="row">
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="images/2.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Oopsie for users — Your favourite food, one click away! Business Analysis, Product
+                Management, Consultancy & 5 others
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="images/1.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">Opennode — Bitcoin, for everyday. UI/UX, Front End, Front End</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="images/3.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                AKASHA — Open systems to expand our collective mind. UI/UX, Front End, Illustration
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container pt-5 pb-2 my-5">
+      <div class="row">
+        <div class="col">
+          <h4>We build digital<br />products</h4>
+        </div>
+        <div class="col">
+          <span
+            >Having a design-led approach to what we do defines who we are. We take on products from
+            inception to launch, from business model to people's pocket, from wireframe to
+            continuous deployment.</span
+          >
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          Strategy UX research Business strategy Brand strategy Product strategy Product management
+        </div>
+        <div class="col">
+          Product design Product design User experience User interface Brand development
+          Illustration Motion & Video
+        </div>
+        <div class="col">
+          Development Development Front-end engineering Web-app development Native app development
+          Development operations
+        </div>
+      </div>
+      View services
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">What's new on<br />Significa Labs</div>
+        <div class="col">
+          <div class="row">
+            Automating releases for UI Kits — How to automate release logs and builds for your style
+            guides Tutorial on Medium
+          </div>
+          <div class="row">
+            An iceberg sank the Titanic — But what’s that got to do with text hierarchy? Article on
+            Medium
+          </div>
+          <div class="row">
+            On creating synergies — Sharing without compromising our identity Article on Medium
+          </div>
+          <div class="row">Enter the Lab</div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">Drop by, we're hiring.</div>
+        <div class="col">
+          We are an open-minded, open-hearted team that loves the thrill of creating exciting new
+          projects. Drop us a line if you’re passionate and talented to do everything you set your
+          mind to. View careers
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col"><img src="images/4.png" alt="" /></div>
+        <div class="col"><img src="images/5.png" alt="" /></div>
+        <div class="col"><img src="images/6.png" alt="" /></div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">Legal © 2019</div>
+        <div class="col">Say hello@significa.co (+351) 226 001 751</div>
+        <div class="col">Links Home Showcase Services About Careers Labs Contact</div>
+        <div class="col">Network Coletiv Adamant</div>
+        <div class="col">Follow us</div>
+      </div>
+    </div>
   </body>
 </html>
